--- a/NORIC_local_monthly_procedures.Rnw
+++ b/NORIC_local_monthly_procedures.Rnw
@@ -192,7 +192,8 @@ dat$ADMISSION_ER_DATE <- as.Date( dat$ADMISSION_ER_DATE , "%Y-%m-%d")
 dat$INTERDAT <- as.Date( dat$INTERDAT , "%Y-%m-%d")
 
    ### restrict dataset to current and last year
-as.numeric( format( dat$INTERDAT , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1 
+ind <- as.numeric( format( dat$INTERDAT , "%Y" )) >= as.numeric( format( Sys.time() , "%Y" )) - 1
+dat <- dat[ind,]
 
    ### month variable for agregation
 dat$Month <- format(dat$INTERDAT , "%y-%m")
