--- a/NORIC_local_monthly_stent.tex
+++ b/NORIC_local_monthly_stent.tex
@@ -14,7 +14,7 @@
 
 
 
-\title{NORIC Bergen \\Stentbruk}\date{ Sun Sep 14 20:20:45 2014 }
+\title{NORIC Bergen \\Stentbruk}\date{ Tue Feb 24 11:58:19 2015 }
 
 
 
@@ -32,7 +32,7 @@
   \caption{Antall stenter etter type og måned}
   
 
-\includegraphics[width=0.95\textwidth]{N_stents_DES_YearMonth.pdf}
+\includegraphics[width=0.95\textwidth]{N_stents_StentType_YearMonth.pdf}
 \end{figure}
 \end{frame}
 
@@ -40,35 +40,35 @@
 
 \begin{frame}
 \begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-3 package
-% Sun Sep 14 20:20:45 2014
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Tue Feb 24 11:58:19 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \toprule
- & BMS & BVS & DES & Sum \\ 
+ & Annet & BMS & DES & Sum \\ 
   \midrule
-13-01 & 16 & 6 & 209 & 231 \\ 
-  13-02 & 20 & 1 & 130 & 151 \\ 
-  13-03 & 31 & 6 & 177 & 214 \\ 
-  13-04 & 26 & 8 & 198 & 232 \\ 
-  13-05 & 14 & 4 & 166 & 184 \\ 
-  13-06 & 15 & 2 & 174 & 191 \\ 
-  13-07 & 6 & 5 & 154 & 165 \\ 
-  13-08 & 12 & 8 & 170 & 190 \\ 
-  13-09 & 5 & 6 & 229 & 240 \\ 
-  13-10 & 11 & 16 & 203 & 230 \\ 
-  13-11 & 6 & 1 & 177 & 184 \\ 
-  13-12 & 3 & 11 & 135 & 149 \\ 
-  14-01 & 4 & 3 & 175 & 182 \\ 
-  14-02 & 6 & 9 & 195 & 210 \\ 
-  14-03 & 7 & 3 & 248 & 258 \\ 
-  14-04 & 5 & 0 & 210 & 215 \\ 
-  14-05 & 4 & 0 & 202 & 206 \\ 
-  14-06 & 5 & 0 & 152 & 157 \\ 
-  14-07 & 3 & 0 & 167 & 170 \\ 
-  14-08 & 0 & 0 & 34 & 34 \\ 
-  Sum & 199 & 89 & 3505 & 3793 \\ 
+13-01 & 6 & 16 & 210 & 232 \\ 
+  13-02 & 1 & 20 & 130 & 151 \\ 
+  13-03 & 6 & 31 & 177 & 214 \\ 
+  13-04 & 8 & 26 & 198 & 232 \\ 
+  13-06 & 2 & 15 & 174 & 191 \\ 
+  13-07 & 5 & 6 & 154 & 165 \\ 
+  13-08 & 8 & 12 & 170 & 190 \\ 
+  13-09 & 6 & 5 & 229 & 240 \\ 
+  13-11 & 1 & 6 & 177 & 184 \\ 
+  14-01 & 3 & 4 & 175 & 182 \\ 
+  14-02 & 9 & 6 & 195 & 210 \\ 
+  14-03 & 3 & 8 & 248 & 259 \\ 
+  14-04 & 0 & 5 & 210 & 215 \\ 
+  14-06 & 0 & 5 & 223 & 228 \\ 
+  14-07 & 0 & 3 & 181 & 184 \\ 
+  14-08 & 1 & 3 & 191 & 195 \\ 
+  14-09 & 6 & 1 & 208 & 215 \\ 
+  14-11 & 3 & 5 & 166 & 174 \\ 
+  15-01 & 1 & 3 & 218 & 222 \\ 
+  15-02 & 1 & 0 & 88 & 89 \\ 
+  Sum & 70 & 180 & 3722 & 3972 \\ 
    \bottomrule
 \end{tabular}
 \caption{Antall stenter etter type og måned} 
@@ -79,35 +79,35 @@
 
 \begin{frame}
 \begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-3 package
-% Sun Sep 14 20:20:45 2014
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Tue Feb 24 11:58:19 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
   \toprule
- & BMS & BVS & DES \\ 
+ & Annet & BMS & DES \\ 
   \midrule
-13-01 & 6.9 & 2.6 & 90.5 \\ 
-  13-02 & 13.2 & 0.7 & 86.1 \\ 
-  13-03 & 14.5 & 2.8 & 82.7 \\ 
-  13-04 & 11.2 & 3.4 & 85.3 \\ 
-  13-05 & 7.6 & 2.2 & 90.2 \\ 
-  13-06 & 7.9 & 1.0 & 91.1 \\ 
-  13-07 & 3.6 & 3.0 & 93.3 \\ 
-  13-08 & 6.3 & 4.2 & 89.5 \\ 
-  13-09 & 2.1 & 2.5 & 95.4 \\ 
-  13-10 & 4.8 & 7.0 & 88.3 \\ 
-  13-11 & 3.3 & 0.5 & 96.2 \\ 
-  13-12 & 2.0 & 7.4 & 90.6 \\ 
-  14-01 & 2.2 & 1.6 & 96.2 \\ 
-  14-02 & 2.9 & 4.3 & 92.9 \\ 
-  14-03 & 2.7 & 1.2 & 96.1 \\ 
-  14-04 & 2.3 & 0.0 & 97.7 \\ 
-  14-05 & 1.9 & 0.0 & 98.1 \\ 
-  14-06 & 3.2 & 0.0 & 96.8 \\ 
-  14-07 & 1.8 & 0.0 & 98.2 \\ 
-  14-08 & 0.0 & 0.0 & 100.0 \\ 
-  Sum & 5.2 & 2.3 & 92.4 \\ 
+13-01 & 2.6 & 6.9 & 90.5 \\ 
+  13-02 & 0.7 & 13.2 & 86.1 \\ 
+  13-03 & 2.8 & 14.5 & 82.7 \\ 
+  13-04 & 3.4 & 11.2 & 85.3 \\ 
+  13-06 & 1.0 & 7.9 & 91.1 \\ 
+  13-07 & 3.0 & 3.6 & 93.3 \\ 
+  13-08 & 4.2 & 6.3 & 89.5 \\ 
+  13-09 & 2.5 & 2.1 & 95.4 \\ 
+  13-11 & 0.5 & 3.3 & 96.2 \\ 
+  14-01 & 1.6 & 2.2 & 96.2 \\ 
+  14-02 & 4.3 & 2.9 & 92.9 \\ 
+  14-03 & 1.2 & 3.1 & 95.8 \\ 
+  14-04 & 0.0 & 2.3 & 97.7 \\ 
+  14-06 & 0.0 & 2.2 & 97.8 \\ 
+  14-07 & 0.0 & 1.6 & 98.4 \\ 
+  14-08 & 0.5 & 1.5 & 97.9 \\ 
+  14-09 & 2.8 & 0.5 & 96.7 \\ 
+  14-11 & 1.7 & 2.9 & 95.4 \\ 
+  15-01 & 0.5 & 1.4 & 98.2 \\ 
+  15-02 & 1.1 & 0.0 & 98.9 \\ 
+  Sum & 1.8 & 4.5 & 93.7 \\ 
    \bottomrule
 \end{tabular}
 \caption{Prosent stenttyper etter måned} 
@@ -118,38 +118,38 @@
 
 \begin{frame}
 \begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-3 package
-% Sun Sep 14 20:20:45 2014
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Tue Feb 24 11:58:19 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrr}
+\begin{tabular}{rrrrrrrrrrrrrrrrrrrrr}
   \toprule
- & \begin{sideways} SAP \end{sideways} & \begin{sideways} UAP \end{sideways} & \begin{sideways} NSTEMI \end{sideways} & \begin{sideways} STEMI \end{sideways} & \begin{sideways} Annet \end{sideways} \\ 
+ & \begin{sideways} V1 \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} Arytmiutredning \end{sideways} & \begin{sideways} Donorutredning \end{sideways} & \begin{sideways} Forskning og utvikling \end{sideways} & \begin{sideways} Hjertestans uten STEMI \end{sideways} & \begin{sideways} Hjertestans ved STEMI \end{sideways} & \begin{sideways} Hjertesvikt/kardiomyopati \end{sideways} & \begin{sideways} Komplettering av tidligere PCI \end{sideways} & \begin{sideways} Mistenkt komplikasjon ved ACB-operasjon \end{sideways} & \begin{sideways} Mistenkt komplikasjon ved Angio/PCI \end{sideways} & \begin{sideways} NSTEMI \end{sideways} & \begin{sideways} Riskovurdering etter vellykket trombolyse \end{sideways} & \begin{sideways} Stabil koronarsykdom  \end{sideways} & \begin{sideways} STEMI \end{sideways} & \begin{sideways} STEMI $>$ 24h \end{sideways} & \begin{sideways} STEMI/Rescue PCI \end{sideways} & \begin{sideways} UAP \end{sideways} & \begin{sideways}  Uklare brystsmerter \end{sideways} & \begin{sideways} Vitieutredning \end{sideways} \\ 
   \midrule
-13-01 & 1.8 & 0.0 & 2.2 & 5.0 & 33.3 \\ 
-  13-02 & 0.0 & 0.0 & 1.8 & 0.0 & 0.0 \\ 
-  13-03 & 3.7 & 5.7 & 2.5 & 0.0 & 0.0 \\ 
-  13-04 & 1.6 & 7.3 & 3.5 & 3.3 & 0.0 \\ 
-  13-05 & 2.2 & 5.6 & 2.4 & 0.0 & 0.0 \\ 
-  13-06 & 2.0 & 2.6 & 0.0 & 0.0 & 0.0 \\ 
-  13-07 & 3.0 & 5.7 & 3.5 & 0.0 & 0.0 \\ 
-  13-08 & 18.9 & 0.0 & 1.4 & 0.0 & 0.0 \\ 
-  13-09 & 4.6 & 0.0 & 1.5 & 5.1 & 0.0 \\ 
-  13-10 & 14.1 & 2.1 & 5.8 & 0.0 & 14.3 \\ 
-  13-11 & 0.0 & 0.0 & 0.0 & 3.1 & 0.0 \\ 
-  13-12 & 3.4 & 14.3 & 11.5 & 0.0 & 0.0 \\ 
-  14-01 & 1.7 & 0.0 & 3.6 & 0.0 & 0.0 \\ 
-  14-02 & 5.0 & 10.0 & 0.0 & 0.0 & 8.3 \\ 
-  14-03 & 2.9 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  14-04 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  14-05 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  14-06 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  14-07 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  14-08 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
-  Sum & 3.4 & 2.8 & 2.2 & 0.8 & 2.6 \\ 
+13-01 &  &  &  & 0.0 &  &  &  &  &  &  &  & 4.3 &  & 3.5 & 20.6 & 0.0 &  & 5.3 &  & 50.0 \\ 
+  13-02 &  &  & 0.0 & 0.0 &  &  &  &  &  &  &  & 14.3 &  & 6.7 & 22.2 & 0.0 &  & 11.1 & 100.0 &  \\ 
+  13-03 &  &  &  &  &  &  & 100.0 &  &  &  &  & 8.6 & 0.0 & 18.5 & 9.1 & 0.0 &  & 25.7 &  & 33.3 \\ 
+  13-04 &  &  & 0.0 &  &  &  &  & 0.0 &  &  &  & 5.9 & 12.5 & 18.0 & 20.0 &  &  & 7.3 & 0.0 &  \\ 
+  13-06 &  &  &  &  &  &  & 100.0 &  &  &  &  & 15.4 &  & 2.0 & 0.0 & 16.7 & 100.0 & 5.1 &  &  \\ 
+  13-07 &  & 0.0 &  &  &  &  &  &  &  &  &  & 3.5 &  & 0.0 & 5.9 & 0.0 &  & 5.7 &  &  \\ 
+  13-08 &  &  &  &  &  & 0.0 &  & 0.0 &  &  &  & 8.5 &  & 5.4 & 9.5 & 0.0 &  & 0.0 &  &  \\ 
+  13-09 &  & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 &  & 100.0 &  & 0.0 &  & 0.0 & 8.6 & 0.0 &  & 2.0 &  &  \\ 
+  13-11 &  & 0.0 &  &  & 0.0 &  &  & 0.0 &  &  & 0.0 & 1.8 &  & 4.3 & 0.0 & 0.0 &  & 8.1 &  & 0.0 \\ 
+  14-01 &  &  &  &  &  &  &  & 0.0 &  & 0.0 &  & 3.6 &  & 0.0 & 6.5 & 0.0 &  & 0.0 & 0.0 &  \\ 
+  14-02 &  &  & 0.0 &  &  &  & 0.0 & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 & 13.2 & 0.0 &  & 2.5 &  & 0.0 \\ 
+  14-03 & 100.0 &  &  &  &  & 0.0 &  &  &  &  &  & 4.2 & 50.0 & 1.0 & 0.0 & 0.0 &  & 5.7 &  &  \\ 
+  14-04 &  &  & 0.0 & 0.0 &  & 0.0 & 0.0 &  &  & 0.0 &  & 1.9 & 0.0 & 0.0 & 12.1 & 0.0 &  & 0.0 &  & 0.0 \\ 
+  14-06 &  & 0.0 &  &  & 0.0 &  & 0.0 &  &  &  &  & 0.0 &  & 0.0 & 10.6 & 0.0 & 0.0 & 0.0 &  &  \\ 
+  14-07 &  &  &  &  &  &  & 0.0 & 0.0 &  &  &  & 1.7 &  & 0.0 & 2.6 &  & 0.0 & 2.6 &  &  \\ 
+  14-08 &  &  & 0.0 &  &  &  & 0.0 & 0.0 &  &  &  & 1.4 &  & 2.1 & 3.2 & 0.0 &  & 0.0 &  & 0.0 \\ 
+  14-09 &  &  & 0.0 &  &  & 0.0 &  & 0.0 &  &  &  & 0.0 &  & 1.6 & 0.0 &  &  & 0.0 &  &  \\ 
+  14-11 &  &  &  &  &  & 0.0 &  &  & 0.0 &  &  & 3.9 &  & 4.3 & 0.0 & 0.0 &  & 2.7 &  & 0.0 \\ 
+  15-01 & 0.0 &  &  &  &  & 0.0 & 0.0 &  & 0.0 &  &  & 0.0 & 0.0 & 1.8 & 2.3 &  &  & 3.2 & 0.0 & 0.0 \\ 
+  15-02 & 0.0 &  &  &  &  &  &  & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 & 0.0 &  &  & 0.0 &  &  \\ 
+  Sum & 12.5 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 9.1 & 0.0 & 0.0 & 16.7 & 0.0 & 4.1 & 9.1 & 3.4 & 7.3 & 1.4 & 60.0 & 4.1 & 14.3 & 9.5 \\ 
    \bottomrule
 \end{tabular}
-\caption{Prosent andel DES per indikasjon og måned} 
+\caption{Prosent andel StentType per indikasjon og måned} 
 \end{table}\end{tiny}
 \end{frame}
 
@@ -171,32 +171,34 @@
 
 \begin{frame}
 \begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-3 package
-% Sun Sep 14 20:20:45 2014
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Tue Feb 24 11:58:19 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrrrrr}
+\begin{tabular}{rrrrrrrrrrrr}
   \toprule
- & \begin{sideways} 13/1 \end{sideways} & \begin{sideways} 13/2 \end{sideways} & \begin{sideways} 13/3 \end{sideways} & \begin{sideways} 13/4 \end{sideways} & \begin{sideways} 14/1 \end{sideways} & \begin{sideways} 14/2 \end{sideways} & \begin{sideways} 14/3 \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
+ & \begin{sideways} 13/1 \end{sideways} & \begin{sideways} 13/2 \end{sideways} & \begin{sideways} 13/3 \end{sideways} & \begin{sideways} 13/4 \end{sideways} & \begin{sideways} 14/1 \end{sideways} & \begin{sideways} 14/2 \end{sideways} & \begin{sideways} 14/3 \end{sideways} & \begin{sideways} 14/4 \end{sideways} & \begin{sideways} 15/1 \end{sideways} & \begin{sideways} NA/NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
   \midrule
-Abbott Absorb & 13 & 14 & 19 & 28 & 14 & 0 & 0 & 88 \\ 
-  Abbott Multi-Link 8 & 29 & 20 & 12 & 7 & 0 & 6 & 0 & 74 \\ 
-  Abbott Multilink Mini-Vision & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 2 \\ 
-  Abbott Multilink Vision & 4 & 2 & 3 & 1 & 0 & 0 & 0 & 10 \\ 
-  Abbott Xience & 326 & 266 & 257 & 220 & 233 & 211 & 73 & 1586 \\ 
-  Biosensors BioMatrix & 73 & 41 & 21 & 26 & 26 & 24 & 9 & 220 \\ 
-  Biosensors Neoflex & 0 & 0 & 0 & 1 & 4 & 3 & 0 & 8 \\ 
-  BS Liberte & 1 & 3 & 1 & 0 & 0 & 0 & 0 & 5 \\ 
-  BS Synergy & 0 & 28 & 54 & 50 & 137 & 102 & 32 & 403 \\ 
-  CID Avant Garde & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 1 \\ 
-  ITGI Aneugraft & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 1 \\ 
-  Medtronic Driver & 2 & 1 & 0 & 0 & 1 & 0 & 0 & 4 \\ 
-  Medtronic Integrity BMS & 26 & 25 & 5 & 9 & 13 & 7 & 2 & 87 \\ 
-  Medtronic Resolute Integrity & 117 & 202 & 221 & 218 & 218 & 224 & 87 & 1287 \\ 
-  Øvrige & 4 & 3 & 2 & 3 & 2 & 1 & 0 & 15 \\ 
-  Stentys BMS & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 \\ 
-  Stentys DES & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 \\ 
-  Sum & 596 & 607 & 595 & 563 & 650 & 578 & 204 & 3793 \\ 
+Abbott Absorb & 13 & 10 & 19 & 1 & 14 & 0 & 7 & 3 & 2 & 35 & 104 \\ 
+  Abbott Multi-Link 8 & 29 & 13 & 12 & 0 & 1 & 5 & 1 & 0 & 0 & 16 & 77 \\ 
+  Abbott Multilink Mini-Vision & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 2 \\ 
+  Abbott Multilink Vision & 4 & 2 & 3 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 11 \\ 
+  Biosensors BioMatrix & 73 & 37 & 21 & 4 & 26 & 19 & 15 & 4 & 0 & 49 & 248 \\ 
+  Biosensors Neoflex & 0 & 0 & 0 & 1 & 4 & 3 & 4 & 1 & 0 & 9 & 22 \\ 
+  BS Liberte & 1 & 2 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 5 \\ 
+  BS Promus Premiere & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 68 & 9 & 77 \\ 
+  BS Rebel & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 \\ 
+  BS Synergy & 0 & 28 & 54 & 11 & 137 & 58 & 86 & 19 & 32 & 138 & 563 \\ 
+  CID Avant Garde & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 \\ 
+  ITGI Aneugraft & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 \\ 
+  Medtronic Driver & 2 & 1 & 0 & 0 & 1 & 0 & 1 & 0 & 0 & 0 & 5 \\ 
+  Medtronic Integrity BMS & 26 & 19 & 5 & 4 & 13 & 4 & 4 & 4 & 1 & 20 & 100 \\ 
+  Medtronic Resolute Integrity & 117 & 138 & 221 & 68 & 218 & 175 & 266 & 101 & 136 & 553 & 1993 \\ 
+  Øvrige & 4 & 3 & 2 & 2 & 2 & 1 & 0 & 1 & 0 & 1 & 16 \\ 
+  Stentys BMS & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 1 \\ 
+  Stentys DES & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 \\ 
+  Xience & 327 & 168 & 257 & 93 & 233 & 178 & 209 & 41 & 70 & 363 & 1939 \\ 
+  Sum & 597 & 423 & 595 & 184 & 651 & 443 & 594 & 174 & 311 & 1195 & 5167 \\ 
    \bottomrule
 \end{tabular}
 \caption{Antall stenter etter merke per kvartal} 
@@ -208,31 +210,33 @@ Abbott Absorb & 13 & 14 & 19 & 28 & 14 & 0 & 0 & 88 \\
 
 \begin{frame}
 \begin{tiny}
-% latex table generated in R 3.1.1 by xtable 1.7-3 package
-% Sun Sep 14 20:20:45 2014
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Tue Feb 24 11:58:19 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrrrrr}
+\begin{tabular}{rrrrrrrrrrrr}
   \toprule
- & \begin{sideways} 13/1 \end{sideways} & \begin{sideways} 13/2 \end{sideways} & \begin{sideways} 13/3 \end{sideways} & \begin{sideways} 13/4 \end{sideways} & \begin{sideways} 14/1 \end{sideways} & \begin{sideways} 14/2 \end{sideways} & \begin{sideways} 14/3 \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
+ & \begin{sideways} 13/1 \end{sideways} & \begin{sideways} 13/2 \end{sideways} & \begin{sideways} 13/3 \end{sideways} & \begin{sideways} 13/4 \end{sideways} & \begin{sideways} 14/1 \end{sideways} & \begin{sideways} 14/2 \end{sideways} & \begin{sideways} 14/3 \end{sideways} & \begin{sideways} 14/4 \end{sideways} & \begin{sideways} 15/1 \end{sideways} & \begin{sideways} NA/NA \end{sideways} & \begin{sideways} Sum \end{sideways} \\ 
   \midrule
-Abbott Absorb & 2.2 & 2.3 & 3.2 & 5.0 & 2.2 & 0.0 & 0.0 & 2.3 \\ 
-  Abbott Multi-Link 8 & 4.9 & 3.3 & 2.0 & 1.2 & 0.0 & 1.0 & 0.0 & 2.0 \\ 
-  Abbott Multilink Mini-Vision & 0.2 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.1 \\ 
-  Abbott Multilink Vision & 0.7 & 0.3 & 0.5 & 0.2 & 0.0 & 0.0 & 0.0 & 0.3 \\ 
-  Abbott Xience & 54.7 & 43.8 & 43.2 & 39.1 & 35.8 & 36.5 & 35.8 & 41.8 \\ 
-  Biosensors BioMatrix & 12.2 & 6.8 & 3.5 & 4.6 & 4.0 & 4.2 & 4.4 & 5.8 \\ 
-  Biosensors Neoflex & 0.0 & 0.0 & 0.0 & 0.2 & 0.6 & 0.5 & 0.0 & 0.2 \\ 
-  BS Liberte & 0.2 & 0.5 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.1 \\ 
-  BS Synergy & 0.0 & 4.6 & 9.1 & 8.9 & 21.1 & 17.6 & 15.7 & 10.6 \\ 
-  CID Avant Garde & 0.0 & 0.0 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 \\ 
-  ITGI Aneugraft & 0.0 & 0.0 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 \\ 
-  Medtronic Driver & 0.3 & 0.2 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.1 \\ 
-  Medtronic Integrity BMS & 4.4 & 4.1 & 0.8 & 1.6 & 2.0 & 1.2 & 1.0 & 2.3 \\ 
-  Medtronic Resolute Integrity & 19.6 & 33.3 & 37.1 & 38.7 & 33.5 & 38.8 & 42.6 & 33.9 \\ 
-  Øvrige & 0.7 & 0.5 & 0.3 & 0.5 & 0.3 & 0.2 & 0.0 & 0.4 \\ 
-  Stentys BMS & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.5 & 0.0 \\ 
-  Stentys DES & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+Abbott Absorb & 2.2 & 2.4 & 3.2 & 0.5 & 2.2 & 0.0 & 1.2 & 1.7 & 0.6 & 2.9 & 2.0 \\ 
+  Abbott Multi-Link 8 & 4.9 & 3.1 & 2.0 & 0.0 & 0.2 & 1.1 & 0.2 & 0.0 & 0.0 & 1.3 & 1.5 \\ 
+  Abbott Multilink Mini-Vision & 0.2 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  Abbott Multilink Vision & 0.7 & 0.5 & 0.5 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.3 & 0.1 & 0.2 \\ 
+  Biosensors BioMatrix & 12.2 & 8.7 & 3.5 & 2.2 & 4.0 & 4.3 & 2.5 & 2.3 & 0.0 & 4.1 & 4.8 \\ 
+  Biosensors Neoflex & 0.0 & 0.0 & 0.0 & 0.5 & 0.6 & 0.7 & 0.7 & 0.6 & 0.0 & 0.8 & 0.4 \\ 
+  BS Liberte & 0.2 & 0.5 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.1 & 0.1 \\ 
+  BS Promus Premiere & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 21.9 & 0.8 & 1.5 \\ 
+  BS Rebel & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.3 & 0.0 & 0.0 \\ 
+  BS Synergy & 0.0 & 6.6 & 9.1 & 6.0 & 21.0 & 13.1 & 14.5 & 10.9 & 10.3 & 11.5 & 10.9 \\ 
+  CID Avant Garde & 0.0 & 0.0 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  ITGI Aneugraft & 0.0 & 0.0 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  Medtronic Driver & 0.3 & 0.2 & 0.0 & 0.0 & 0.2 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.1 \\ 
+  Medtronic Integrity BMS & 4.4 & 4.5 & 0.8 & 2.2 & 2.0 & 0.9 & 0.7 & 2.3 & 0.3 & 1.7 & 1.9 \\ 
+  Medtronic Resolute Integrity & 19.6 & 32.6 & 37.1 & 37.0 & 33.5 & 39.5 & 44.8 & 58.0 & 43.7 & 46.3 & 38.6 \\ 
+  Øvrige & 0.7 & 0.7 & 0.3 & 1.1 & 0.3 & 0.2 & 0.0 & 0.6 & 0.0 & 0.1 & 0.3 \\ 
+  Stentys BMS & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  Stentys DES & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  Xience & 54.8 & 39.7 & 43.2 & 50.5 & 35.8 & 40.2 & 35.2 & 23.6 & 22.5 & 30.4 & 37.5 \\ 
    \bottomrule
 \end{tabular}
 \caption{Prosent stentermerke per kvartal} 
