--- a/NORIC_local_monthly_stent.tex
+++ b/NORIC_local_monthly_stent.tex
@@ -14,10 +14,7 @@
 
 
 
-\title{NORIC Bergen \\Stentbruk}\date{ Tue Feb 24 11:58:19 2015 }
-
-
-
+\title{NORIC Bergen \\Stentbruk}\date{ Tue Feb 24 12:44:29 2015 }
 
 
 \begin{document}
@@ -41,7 +38,7 @@
 \begin{frame}
 \begin{tiny}
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Tue Feb 24 11:58:19 2015
+% Tue Feb 24 12:44:29 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -80,7 +77,7 @@
 \begin{frame}
 \begin{tiny}
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Tue Feb 24 11:58:19 2015
+% Tue Feb 24 12:44:29 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -119,34 +116,34 @@
 \begin{frame}
 \begin{tiny}
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Tue Feb 24 11:58:19 2015
+% Tue Feb 24 12:44:29 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrrrrrrrrrrrrrrrrr}
+\begin{tabular}{rrrrrr}
   \toprule
- & \begin{sideways} V1 \end{sideways} & \begin{sideways} Annet \end{sideways} & \begin{sideways} Arytmiutredning \end{sideways} & \begin{sideways} Donorutredning \end{sideways} & \begin{sideways} Forskning og utvikling \end{sideways} & \begin{sideways} Hjertestans uten STEMI \end{sideways} & \begin{sideways} Hjertestans ved STEMI \end{sideways} & \begin{sideways} Hjertesvikt/kardiomyopati \end{sideways} & \begin{sideways} Komplettering av tidligere PCI \end{sideways} & \begin{sideways} Mistenkt komplikasjon ved ACB-operasjon \end{sideways} & \begin{sideways} Mistenkt komplikasjon ved Angio/PCI \end{sideways} & \begin{sideways} NSTEMI \end{sideways} & \begin{sideways} Riskovurdering etter vellykket trombolyse \end{sideways} & \begin{sideways} Stabil koronarsykdom  \end{sideways} & \begin{sideways} STEMI \end{sideways} & \begin{sideways} STEMI $>$ 24h \end{sideways} & \begin{sideways} STEMI/Rescue PCI \end{sideways} & \begin{sideways} UAP \end{sideways} & \begin{sideways}  Uklare brystsmerter \end{sideways} & \begin{sideways} Vitieutredning \end{sideways} \\ 
+ & \begin{sideways} SAP \end{sideways} & \begin{sideways} UAP \end{sideways} & \begin{sideways} NSTEMI \end{sideways} & \begin{sideways} STEMI \end{sideways} & \begin{sideways} Annet \end{sideways} \\ 
   \midrule
-13-01 &  &  &  & 0.0 &  &  &  &  &  &  &  & 4.3 &  & 3.5 & 20.6 & 0.0 &  & 5.3 &  & 50.0 \\ 
-  13-02 &  &  & 0.0 & 0.0 &  &  &  &  &  &  &  & 14.3 &  & 6.7 & 22.2 & 0.0 &  & 11.1 & 100.0 &  \\ 
-  13-03 &  &  &  &  &  &  & 100.0 &  &  &  &  & 8.6 & 0.0 & 18.5 & 9.1 & 0.0 &  & 25.7 &  & 33.3 \\ 
-  13-04 &  &  & 0.0 &  &  &  &  & 0.0 &  &  &  & 5.9 & 12.5 & 18.0 & 20.0 &  &  & 7.3 & 0.0 &  \\ 
-  13-06 &  &  &  &  &  &  & 100.0 &  &  &  &  & 15.4 &  & 2.0 & 0.0 & 16.7 & 100.0 & 5.1 &  &  \\ 
-  13-07 &  & 0.0 &  &  &  &  &  &  &  &  &  & 3.5 &  & 0.0 & 5.9 & 0.0 &  & 5.7 &  &  \\ 
-  13-08 &  &  &  &  &  & 0.0 &  & 0.0 &  &  &  & 8.5 &  & 5.4 & 9.5 & 0.0 &  & 0.0 &  &  \\ 
-  13-09 &  & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 &  & 100.0 &  & 0.0 &  & 0.0 & 8.6 & 0.0 &  & 2.0 &  &  \\ 
-  13-11 &  & 0.0 &  &  & 0.0 &  &  & 0.0 &  &  & 0.0 & 1.8 &  & 4.3 & 0.0 & 0.0 &  & 8.1 &  & 0.0 \\ 
-  14-01 &  &  &  &  &  &  &  & 0.0 &  & 0.0 &  & 3.6 &  & 0.0 & 6.5 & 0.0 &  & 0.0 & 0.0 &  \\ 
-  14-02 &  &  & 0.0 &  &  &  & 0.0 & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 & 13.2 & 0.0 &  & 2.5 &  & 0.0 \\ 
-  14-03 & 100.0 &  &  &  &  & 0.0 &  &  &  &  &  & 4.2 & 50.0 & 1.0 & 0.0 & 0.0 &  & 5.7 &  &  \\ 
-  14-04 &  &  & 0.0 & 0.0 &  & 0.0 & 0.0 &  &  & 0.0 &  & 1.9 & 0.0 & 0.0 & 12.1 & 0.0 &  & 0.0 &  & 0.0 \\ 
-  14-06 &  & 0.0 &  &  & 0.0 &  & 0.0 &  &  &  &  & 0.0 &  & 0.0 & 10.6 & 0.0 & 0.0 & 0.0 &  &  \\ 
-  14-07 &  &  &  &  &  &  & 0.0 & 0.0 &  &  &  & 1.7 &  & 0.0 & 2.6 &  & 0.0 & 2.6 &  &  \\ 
-  14-08 &  &  & 0.0 &  &  &  & 0.0 & 0.0 &  &  &  & 1.4 &  & 2.1 & 3.2 & 0.0 &  & 0.0 &  & 0.0 \\ 
-  14-09 &  &  & 0.0 &  &  & 0.0 &  & 0.0 &  &  &  & 0.0 &  & 1.6 & 0.0 &  &  & 0.0 &  &  \\ 
-  14-11 &  &  &  &  &  & 0.0 &  &  & 0.0 &  &  & 3.9 &  & 4.3 & 0.0 & 0.0 &  & 2.7 &  & 0.0 \\ 
-  15-01 & 0.0 &  &  &  &  & 0.0 & 0.0 &  & 0.0 &  &  & 0.0 & 0.0 & 1.8 & 2.3 &  &  & 3.2 & 0.0 & 0.0 \\ 
-  15-02 & 0.0 &  &  &  &  &  &  & 0.0 &  &  &  & 0.0 & 0.0 & 0.0 & 0.0 &  &  & 0.0 &  &  \\ 
-  Sum & 12.5 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 9.1 & 0.0 & 0.0 & 16.7 & 0.0 & 4.1 & 9.1 & 3.4 & 7.3 & 1.4 & 60.0 & 4.1 & 14.3 & 9.5 \\ 
+13-01 & 3.5 & 5.3 & 4.3 & 17.1 & 33.3 \\ 
+  13-02 & 6.7 & 11.1 & 14.3 & 21.4 & 25.0 \\ 
+  13-03 & 18.5 & 25.7 & 8.6 & 8.1 & 28.6 \\ 
+  13-04 & 18.0 & 7.3 & 5.9 & 20.0 & 6.7 \\ 
+  13-06 & 2.0 & 5.1 & 15.4 & 6.6 & 100.0 \\ 
+  13-07 & 0.0 & 5.7 & 3.5 & 5.1 & 0.0 \\ 
+  13-08 & 5.4 & 0.0 & 8.5 & 7.0 & 0.0 \\ 
+  13-09 & 0.0 & 2.0 & 0.0 & 7.7 & 5.3 \\ 
+  13-11 & 4.3 & 8.1 & 1.8 & 0.0 & 0.0 \\ 
+  14-01 & 0.0 & 0.0 & 3.6 & 5.9 & 0.0 \\ 
+  14-02 & 0.0 & 2.5 & 0.0 & 11.9 & 0.0 \\ 
+  14-03 & 1.0 & 5.7 & 4.2 & 0.0 & 12.5 \\ 
+  14-04 & 0.0 & 0.0 & 1.9 & 11.8 & 0.0 \\ 
+  14-06 & 0.0 & 0.0 & 0.0 & 9.3 & 0.0 \\ 
+  14-07 & 0.0 & 2.6 & 1.7 & 2.6 & 0.0 \\ 
+  14-08 & 2.1 & 0.0 & 1.4 & 2.9 & 0.0 \\ 
+  14-09 & 1.6 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  14-11 & 4.3 & 2.7 & 3.9 & 0.0 & 0.0 \\ 
+  15-01 & 1.8 & 3.2 & 0.0 & 2.3 & 0.0 \\ 
+  15-02 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\ 
+  Sum & 3.4 & 4.1 & 4.1 & 7.1 & 5.1 \\ 
    \bottomrule
 \end{tabular}
 \caption{Prosent andel StentType per indikasjon og måned} 
@@ -172,7 +169,7 @@
 \begin{frame}
 \begin{tiny}
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Tue Feb 24 11:58:19 2015
+% Tue Feb 24 12:44:29 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrrr}
@@ -211,7 +208,7 @@ Abbott Absorb & 13 & 10 & 19 & 1 & 14 & 0 & 7 & 3 & 2 & 35 & 104 \\
 \begin{frame}
 \begin{tiny}
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Tue Feb 24 11:58:19 2015
+% Tue Feb 24 12:44:29 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrrr}
